Sort out configuration for base url and use 'duckling.ddl.baseURL' in the same way as 'umt' and 'clb'. This is also required by 'dklboot'.

--- a/src/main/resources/templates/default_en_US.properties
+++ b/src/main/resources/templates/default_en_US.properties
@@ -1558,7 +1558,7 @@ javascript.site.properties.clbconfig=CLB Config
 javascript.site.properties.emailconfig=Email Config
 javascript.site.properties.sysconfig=System Config
 javascript.site.properties.domainconfig=Domain Name Config
-duckling.baseURL=baseURL
+duckling.ddl.baseURL=baseURL
 duckling.dateformat=dateformat
 duckling.site.name=sitename
 duckling.umt.vo=VO
