--- a/src/main/resources/templates/default_zh_CN.properties
+++ b/src/main/resources/templates/default_zh_CN.properties
@@ -1463,7 +1463,7 @@ javascript.site.properties.clbconfig=\u6587\u6863\u7ba1\u7406\u5de5\u5177\u914d\
 javascript.site.properties.emailconfig=\u7535\u5b50\u90ae\u4ef6\u914d\u7f6e
 javascript.site.properties.sysconfig=\u7cfb\u7edf\u53c2\u6570\u914d\u7f6e
 javascript.site.properties.domainconfig=\u7ad9\u70b9\u57df\u540d\u914d\u7f6e
-duckling.baseURL=\u7ad9\u70b9baseURL
+duckling.ddl.baseURL=\u7ad9\u70b9baseURL
 duckling.dateformat=\u65e5\u671f\u683c\u5f0f
 duckling.site.name=\u7ad9\u70b9\u540d\u79f0
 duckling.umt.vo=\u7528\u6237\u793e\u533aID
