--- a/src/main/resources/templates/default_zh_CN.properties
+++ b/src/main/resources/templates/default_zh_CN.properties
@@ -1468,12 +1468,12 @@ duckling.dateformat=\u65e5\u671f\u683c\u5f0f
 duckling.site.name=\u7ad9\u70b9\u540d\u79f0
 duckling.umt.vo=\u7528\u6237\u793e\u533aID
 duckling.clb.localuser=dct\u8bbf\u95eeclb\u7f3a\u7701\u8d26\u53f7
-email.mail.smtp.host=\u7535\u5b50\u90ae\u4ef6\u53d1\u9001\u4e3b\u673a\u5730\u5740
+duckling.email.smtp.host=\u7535\u5b50\u90ae\u4ef6\u53d1\u9001\u4e3b\u673a\u5730\u5740
 email.mail.smtp.auth=\u53d1\u9001\u7528\u6237\u8ba4\u8bc1
-email.fromAddress=\u56de\u590d\u90ae\u4ef6\u5730\u5740
+duckling.email.smtp.from=\u56de\u590d\u90ae\u4ef6\u5730\u5740
 email.address=\u53d1\u9001\u90ae\u7bb1\u5730\u5740
-email.username=\u90ae\u7bb1\u7528\u6237\u540d
-email.password=\u90ae\u7bb1\u5bc6\u7801
+duckling.email.smtp.username=\u90ae\u7bb1\u7528\u6237\u540d
+duckling.email.smtp.password=\u90ae\u7bb1\u5bc6\u7801
 emailnotifier.subjectLine=\u7535\u5b50\u90ae\u4ef6\u901a\u77e5\u4e3b\u9898
 emailnotifier.emailtextPage=\u7535\u5b50\u90ae\u4ef6\u6a21\u677f\u9875\u9762ID
 emailtooutside.subjectLine=\u5171\u4eab\u9875\u9762\u6807\u9898
